# CytoBulk

./: .gitignore  .gitmodules  404.html  CytoBulk.py  LICENSE  MANIFEST.in  README.md  __init__.py  environment.yml  graph_deconv.py  image_prediction.py  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  utils.py
APIs/: index.html
CytoBulk/: CytoBulk.py  cell2location.py  graph_deconv.py  read_data.py  spatial_mapping.py  test.py  utils.py
CytoBulk/config/: .Rhistory  marker gene(1).csv  marker_gene.txt
Examples/: index.html
Install/: index.html
References/: index.html
analysis/bulk_deconv/: bulk_other_deconv.R  run_bulk_deconv.sh
analysis/plot/: plot_heatmap.ipynb
analysis/preprocessing/: Get_exon_length.R  infercnv.R  sc_annotation.R  sc_annotation_GSE178362.R  sc_annotation_example.R  sc_utils.R  stimulation.ipynb
analysis/st_deconv/: run_methods_card.sh  run_methods_cell2.sh  run_methods_rctd.sh  run_methods_spatialdwls.sh  run_methods_spotlight.sh  run_methods_sti.sh  run_methods_stride.sh  st_other_deconv.R  stcell2.py
config/: lrpairs.csv
cytobulk/: __init__.py
cytobulk/config/: AML_GSE135851_gene.csv  AML_GSE135851_gene.xlsx  gene_length.txt  marker gene plot.csv  marker_gene_1006.csv  marker_gene_1007.csv  marker_gene_1007_2.csv  marker_gene_1009.csv  marker_gene_barplot.csv  marker_gene_index.csv  marker_index.csv  (+2 more)
docs/: APIs.md  Examples.md  Install.md  References.md  index.md
get/: _counts.py
plots/: __init__.py  _plot.py  index.html
preprocessing/: _filtering.py  _preprocessing.py  _rpackage.py  cytobulk_preprocessing.R
search/: search_index.json
tests/: conftest.py  matching_results.csv  single_cell_data.csv  test_tl_he_prediction.py  test_tl_mapping.py  test_tl_plots.py  test_tl_tools.py
tools/: __init__.py  _deconv.py  _segmentation.py  index.html
utils/: _evaluation.py  _math.py  _stimulation.py  _utils.py
(+91 files in other folders)
